manifests-successful/snyk-monitor-2.14.1.tgz-manifest.yaml
---
# Source: snyk-monitor/templates/networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: my-release
  labels:
    app.kubernetes.io/name: my-release
    helm.sh/chart: snyk-monitor-2.14.1
    app.kubernetes.io/instance: my-release
    app.kubernetes.io/managed-by: Helm
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/name: my-release
      app.kubernetes.io/instance: my-release
      app.kubernetes.io/managed-by: Helm
  policyTypes:
  - Ingress
  - Egress
  # Ingress is denied hence there is no "ingress" block.
  # Egress is allowed for any traffic.
  egress:
  - {}
---
# Source: snyk-monitor/templates/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: my-release
  labels:
    app.kubernetes.io/name: my-release
    helm.sh/chart: snyk-monitor-2.14.1
    app.kubernetes.io/instance: my-release
    app.kubernetes.io/managed-by: Helm
spec:
  strategy:
    type: RollingUpdate
  selector:
    matchLabels:
      app.kubernetes.io/name: my-release
      app.kubernetes.io/instance: my-release
  template:
    metadata:
      labels:
        app.kubernetes.io/name: my-release
        app.kubernetes.io/instance: my-release
        app.kubernetes.io/managed-by: Helm
    spec:
      affinity:
        nodeAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
              - matchExpressions:
                - key: "kubernetes.io/arch"
                  operator: In
                  values:
                    - amd64
                - key: "kubernetes.io/os"
                  operator: In
                  values:
                    - linux
      serviceAccountName: my-release
      restartPolicy: Always
      containers:
        - name: my-release
          image: "snyk/kubernetes-monitor:2.14.1"
          imagePullPolicy: Always
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
          volumeMounts:
          - name: docker-config
            readOnly: true
            mountPath: "/srv/app/.docker"
          - name: temporary-storage
            mountPath: "/var/tmp"
          - name: ssl-certs
            mountPath: "/srv/app/certs"
          - name: workload-policies
            mountPath: "/tmp/policies"
            readOnly: true
          - name: registries-conf
            mountPath: "/srv/app/.config/containers"
          resources:
            requests:
              cpu: 250m
              memory: 400Mi
            limits:
              cpu: "1"
              memory: 2Gi
          livenessProbe:
            exec:
              command:
              - "true"
          readinessProbe:
            exec:
              command:
              - "true"
          securityContext:
            privileged: false
            runAsNonRoot: true
            allowPrivilegeEscalation: false
            readOnlyRootFilesystem: true
            capabilities:
              drop:
                - ALL
      volumes:
        - name: docker-config
          secret:
            secretName: snyk-monitor
            optional: true
            items:
              - key: dockercfg.json
                path: config.json
        - name: temporary-storage
          emptyDir:
            sizeLimit: 50Gi
        - name: ssl-certs
          configMap:
            name: snyk-monitor-certs
            optional: true
        - name: workload-policies
          configMap:
            name: snyk-monitor-workload-policies
            optional: true
        - name: registries-conf
          configMap:
            name: snyk-monitor-registries-conf
            optional: true
---
# Source: snyk-monitor/templates/pvc.yaml
# We create a PVC only if requested.
